--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "license": "MIT",
+  "scripts" : {
+    "start" : "nodemon server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "email-validator": "^2.0.4",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
