feat(ses): add aws ses

--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "type": "module",
   "license": "MIT",
-  "scripts" : {
-    "start" : "nodemon server.js"
+  "scripts": {
+    "start": "nodemon server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
