--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "mocha __tests__/**/*.test.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
@@ -20,6 +21,11 @@
     "nanoid": "^5.1.3",
     "node-geocoder": "^4.4.1",
     "nodemon": "^3.1.9",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0"
   }
 }
