--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ "master", "main" ]
   pull_request:
-    branches: [ "master", "main ]
+    branches: [ "master", "main" ]
 
 jobs:
   build:
