--- a/server/.github/workflows/node.js.yml
+++ b/server/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
+        working-directory: ./
     - run: yarn install
     - run: yarn test
+      working-directory: ./
