--- a/workflows/node.js.yml
+++ b/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-        working-directory: ./
+        working-directory: ./server
     - run: yarn install
     - run: yarn test
-      working-directory: ./
+      working-directory: ./server
