--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -11,22 +8,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x, 20.x, 22.x]  # Test across different Node.js versions
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4  # Checkout the repository code
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-        working-directory: ./server
-    - run: yarn install
-    - run: yarn test
-      working-directory: ./server
+        cache: 'yarn'  # Cache Yarn dependencies
+    - name: Install dependencies
+      run: yarn install
+      working-directory: ./server  # Set the working directory to 'server'
+    - name: Run tests
+      run: yarn test
+      working-directory: ./server  # Set the working directory to 'server'
