--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]  # Test across different Node.js versions
+        node-version: [18.x]  # Test across different Node.js versions
 
     steps:
     - uses: actions/checkout@v4  # Checkout the repository code
@@ -23,7 +23,6 @@ jobs:
         cache: 'yarn'  # Cache Yarn dependencies
     - name: Install dependencies
       run: yarn install
-      working-directory: ./server  # Set the working directory to 'server'
     - name: Run tests
       run: yarn test
-      working-directory: ./server  # Set the working directory to 'server'
+  
