--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,17 +12,17 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]  # Test on Node.js 18.x
+        node-version: [18.x]  
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4  # Fetch repo code
+      uses: actions/checkout@v4 
 
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'  # Cache Yarn dependencies
+        cache: 'yarn' 
 
     - name: Create .env file
       run: |
